Fix error toast on small screen

--- a/src/WebClientApp/src/components/Toast/Toast.module.scss
+++ b/src/WebClientApp/src/components/Toast/Toast.module.scss
@@ -23,6 +23,7 @@
 
 .top {
   top: max(80px, 5%);
+  bottom: unset;
 }
 
 .relative {
